section divided accordingly

--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DASHBOARD</title>
 </head>
+<link rel="stylesheet" href="styles.css">
 <body>
-    
+<div class="container">
+    <div class="side-bar">side-bar</div>
+    <div class="header">header</div>
+    <div class="content"><h1>Lorem ipsum dolor sit amet 
+        consectetur adipisicing elit. Numquam consequatur qui, 
+        commodi accusamus illum sapiente in voluptatem, corporis t
+        emporibus laudantium reprehenderit quaerat culpa voluptatibus 
+        obcaecati aliquid rerum asperiores quasi. Quo!</h1></div>
+</div>
 </body>
 </html>
