--- a/index.html
+++ b/index.html
@@ -8,13 +8,67 @@
 <link rel="stylesheet" href="styles.css">
 <body>
 <div class="container">
-    <div class="side-bar">side-bar</div>
-    <div class="header">header</div>
-    <div class="content"><h1>Lorem ipsum dolor sit amet 
-        consectetur adipisicing elit. Numquam consequatur qui, 
-        commodi accusamus illum sapiente in voluptatem, corporis t
-        emporibus laudantium reprehenderit quaerat culpa voluptatibus 
-        obcaecati aliquid rerum asperiores quasi. Quo!</h1></div>
+    <div class="side-bar">
+<div class="dasboard_title">DASHBOARD</div>
+<div class="dashboard-main-setting">
+    <div class="setting-card">home</div>
+    <div class="setting-card">profile</div>
+    <div class="setting-card">messages</div>
+    <div class="setting-card">history</div>
+    <div class="setting-card">task</div>
+    <div class="setting-card">communities</div>
+</div>
+<div class="dashboard-support-setting">
+    <div class="setting-card">settings</div>
+    <div class="setting-card">support</div>
+    <div class="setting-card">privacy</div>
+</div>
+    </div>
+    <div class="header">
+<div class="search_icon">search_icon</div>
+<div class="search_bar">search_bar</div>
+<div class="notification_icon">notification_icon</div>
+<div class="profile_icon_small">profile_icon_small</div>
+<div class="profile_name">profile_name</div>
+<div class="profile_icon_large">profile_icon_large</div>
+<div class="greeting">greeting</div>
+<div class="nus_icon">nus_icon</div>
+    </div>
+    <div class="content">
+        <div class="your_projects"><h3>Your Projects</h3>
+        <div class="content_project_container">
+            <div class="project1 card"><p>Super Project</p><p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis quos ipsa earum, et perspiciatis possimus?
+                </p></div>
+            <div class="project2 card"><p>Super Project</p><p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis quos ipsa earum, et perspiciatis possimus?
+                </p></div>
+            <div class="project3 card"><p>Super Project</p><p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis quos ipsa earum, et perspiciatis possimus?
+                </p></div>
+            <div class="project4 card"><p>Super Project</p><p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis quos ipsa earum, et perspiciatis possimus?
+                </p></div>
+            <div class="project5 card"><p>Super Project</p><p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis quos ipsa earum, et perspiciatis possimus?
+                </p></div>
+            <div class="project6 card"><p>Super Project</p><p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis quos ipsa earum, et perspiciatis possimus?
+                </p></div>
+        </div>
+        </div>
+        <div class="announcement"><h3>Announcement</h3>
+        <div class="card announcement">
+
+        </div>
+
+        </div>
+        <div class="trending"><h3>Trending</h3>
+        <div class="card trending">
+        
+        </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
